--- a/alexanders/style.css
+++ b/alexanders/style.css
@@ -99,6 +99,7 @@ main {
     background: none;
     border: none;
     margin: auto;
+    padding: auto;
     -webkit-transition-duration: 100ms;
 }
 
