--- a/style.css
+++ b/style.css
@@ -5,36 +5,26 @@ body {
     grid-template-columns: repeat(5, 1fr);
     grid-template-areas:
     ". . . . ."
-    ". . flex1 . ."
-    ". . . . ."
-    ". . flex2 . .";
-    grid-template-rows: 50px 150px 150px 150px;
-}
-
-.flex-container1 {
-    grid-area: flex1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    ". alexanders . simons ."
+    ". . . . .";
+    grid-template-rows: 50px 150px 150px;
 }
 
 a {
-    background: orangered;
-    border: 3px solid white;
-    border-radius: 100000000px;
     text-decoration: none;
     color: white;
-    padding: 84px 80px;
-    transition: 300ms ease;
-}
-
-a:hover {
-    padding: 88px 84px;
-}
-
-.flex-container2 {
-    grid-area: flex2;
+    background: seagreen;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    border: 4px solid white;
+    border-radius: 30px;
+}
+
+.alexanders {
+    grid-area: alexanders;
+}
+
+.simons {
+    grid-area: simons;
 }
